[FLINK-39957][table] Support `EXPLAIN` of `CREATE [OR ALTER] MATERIALIZED TABLE`